Node tool crash if first output is not geometry #119578

Closed
opened 2024-03-16 21:59:22 +01:00 by Guillermo Venegas · 1 comment
Contributor

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.76

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-14 23:27, hash: 2e6a8ae49c1c
Broken: version: 4.1.0 Release Candidate, branch: blender-v4.1-release, commit date: 2024-03-14 17:18, hash: 335ff6efab67
Worked: unknown

Short description of error
Node tool crash if first output is not geometry

Exact steps for others to reproduce the error

ExceptionCode         : EXCEPTION_ACCESS_VIOLATION

Stack trace:
blender.exe         :0x00007FF6843CEA70  blender::bke::GeometrySet::ensure_owns_direct_data
blender.exe         :0x00007FF68536B600  blender::ed::geometry::store_result_geometry
blender.exe         :0x00007FF68536A9B0  blender::ed::geometry::run_node_group_exec
blender.exe         :0x00007FF68536B350  blender::ed::geometry::run_node_group_invoke
blender.exe         :0x00007FF684792C40  wm_operator_invoke
blender.exe         :0x00007FF6847921D0  wm_operator_call_internal
blender.exe         :0x00007FF684789C40  WM_operator_name_call_ptr_with_depends_on_cursor

**System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.76 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-14 23:27, hash: `2e6a8ae49c1c` Broken: version: 4.1.0 Release Candidate, branch: blender-v4.1-release, commit date: 2024-03-14 17:18, hash: `335ff6efab67` Worked: unknown **Short description of error** Node tool crash if first output is not geometry **Exact steps for others to reproduce the error** ``` ExceptionCode : EXCEPTION_ACCESS_VIOLATION Stack trace: blender.exe :0x00007FF6843CEA70 blender::bke::GeometrySet::ensure_owns_direct_data blender.exe :0x00007FF68536B600 blender::ed::geometry::store_result_geometry blender.exe :0x00007FF68536A9B0 blender::ed::geometry::run_node_group_exec blender.exe :0x00007FF68536B350 blender::ed::geometry::run_node_group_invoke blender.exe :0x00007FF684792C40 wm_operator_invoke blender.exe :0x00007FF6847921D0 wm_operator_call_internal blender.exe :0x00007FF684789C40 WM_operator_name_call_ptr_with_depends_on_cursor ``` <video src="/attachments/2f5626a6-5431-4d04-80b7-6662dc944936" title="2024-03-16 14-56-57.mp4" controls></video>
Guillermo Venegas added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-03-16 21:59:23 +01:00
Iliya Katushenock added the
Interest
Geometry Nodes
Interest
Nodes & Physics
labels 2024-03-16 22:03:35 +01:00

Confirmed for 4.1 as well. Additionally, if the first Input is also not a Geometry, the wrong thing happens but that's a different issue than this crash for Outputs.

Confirmed for 4.1 as well. Additionally, if the first Input is also not a Geometry, the wrong thing happens but that's a different issue than this crash for Outputs.
Jesse Yurkovich added
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Triage
labels 2024-03-17 02:12:12 +01:00
Jesse Yurkovich added
Module
Nodes & Physics
and removed
Interest
Nodes & Physics
labels 2024-03-17 02:14:16 +01:00
Pratik Borhade added this to the 4.1 milestone 2024-03-17 06:44:06 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-18 14:36:59 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119578
No description provided.