Fix #119578: crash when node tool does not have geometry as first output socket

This was simply missing a check and error message. The same error message
is shown when the node group is used as modifier.

Pull Request: https://projects.blender.org/blender/blender/pulls/119604